syntax = "proto3";

option csharp_namespace = "ZeafloServer.Proto.Cities";

import "Cities/Models.proto";

service CitiesApi {
  rpc GetByIds(GetCitiesByIdsRequest) returns (GetCitiesByIdsResult);
}
